# Opinion-dynamics-post-training

./: .gitignore  check_readout.py  compare_policies.py  environment.yml  llm_predictor.py  pokec_simulations.py  probe_df.py  probe_digit_prior.py  probe_parse.py  pyproject.toml  retrain_steps.py  run_cf_fj.py  run_epochs_ablation.sh  run_experiments.sh  run_free_fj.py  run_untuned_llm.py  split_helper.py  subgroup_helper.py  test_mask.py
condor/: SETUP.md  configs.txt  configs_05b_fullft_chat.txt  configs_7b.txt  configs_7b_fullft.txt  configs_7b_r512.txt  configs_egta_cf.txt  configs_egta_lr_probe.txt  configs_egta_rlkl.txt  configs_egta_sftkl.txt  configs_egta_sftkl_baseline_track.txt  configs_egta_sftkl_connected.txt  configs_egta_sftkl_dense.txt  configs_egta_sftkl_sliver.txt  configs_mask.txt  configs_r1.txt  configs_r2.txt  configs_r8.txt  egta_cf.sub  egta_cf_anchor.sub  egta_fj_eval.sub  egta_fj_eval_cf.sub  egta_lr_probe.sub  egta_rlkl.sub  egta_sftkl.sub  egta_sftkl_baseline_track.sub  egta_sftkl_connected.sub  egta_sftkl_dense.sub  egta_sftkl_sliver.sub  egta_untuned.sub  egta_untuned_connected.sub  llm_sweep.sub  llm_sweep_05b_fullft_chat.sub  llm_sweep_7b.sub  llm_sweep_7b_fullft.sub  llm_sweep_7b_r512.sub  llm_sweep_fullft.sub  llm_sweep_mask.sub  llm_sweep_mask_b3.sub  llm_sweep_r1.sub  (+9 more)
qwen.5b_training_analysis_scripts/: analyze_30rd.py  analyze_large_beta.py  analyze_mask_grid.py  analyze_rank_sweep.py  make_fig2a.py  make_fig2a_05b_ff_chat.py  make_fig2a_mask.py  make_fig_beta0_capacity.py  make_fig_full_beta_grid.py  make_fig_mask_grid.py  (+1 more)
(+20 files in other folders)
