[project]
name = "opinion-dynamics-post-training"
version = "0.1.0"
description = "LLM-as-Algo extension of Wu et al. opinion dynamics"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2",
    "transformers>=4.45",
    "trl>=0.12,<2.0",
    "peft>=0.13",
    "datasets>=2.20",
    "accelerate>=0.34",
    "wandb>=0.17",
    "weave>=0.50",
    "numpy<2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "sentence-transformers>=3.0",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
]

[tool.uv]
# pin numpy<2 to keep transformer-lens and others happy
